<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />

        <item android:title="Manage Items">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_additem"
                        android:icon="@drawable/ic_add_item"
                        android:title="@string/menu_additem" />
                    <item
                        android:id="@+id/nav_updateitem"
                        android:icon="@drawable/ic_update"
                        android:title="@string/menu_updateitem" />
                    <item
                        android:id="@+id/nav_deleteitem"
                        android:icon="@drawable/ic_delete"
                        android:title="@string/menu_deleteitem" />
                </group>
            </menu>
        </item>
    </group>
</menu>