<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.antique_pavbhaji.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_additem"
        android:name="com.example.antique_pavbhaji.ui.addItem.AddItemFragment"
        android:label="@string/menu_additem"
        tools:layout="@layout/fragment_additem" />

    <fragment
        android:id="@+id/nav_updateitem"
        android:name="com.example.antique_pavbhaji.ui.updateItem.UpdateItemFragment"
        android:label="@string/menu_updateitem"
        tools:layout="@layout/fragment_updateitem" />

    <fragment
        android:id="@+id/nav_deleteitem"
        android:name="com.example.antique_pavbhaji.ui.deleteItem.DeleteItemFragment"
        android:label="@string/menu_deleteitem"
        tools:layout="@layout/fragment_deleteitem" />
</navigation>