<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/bell_mt"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="20dp"
            android:text="@string/login_here"
            android:textColor="#5F44BB"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/loguser"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:background="@drawable/edittext_rounded"
                android:ems="10"
                android:fontFamily="@font/belleza"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="#5F44BB"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/logpass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:autofillHints=""
                android:background="@drawable/edittext_rounded"
                android:ems="10"
                android:fontFamily="@font/bell_mt"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:textColor="#5F44BB"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"

                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/bell_mt"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="#F3F3F3"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/lgprgbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>