<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.addItem.AddItemFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lbladdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_items"
            android:textColor="#E91E63"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblcat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bell_mt"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spincatvalue"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded"
                android:entries="@array/Category" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bell_mt"
                android:gravity="center"
                android:text="@string/item_name"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtlblitem"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded"
                android:ems="10"
                android:fontFamily="@font/bell_mt"
                android:hint="Item Name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bell_mt"
                android:gravity="center"
                android:text="Amount"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtlblamount"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded"
                android:ems="10"
                android:fontFamily="@font/bell_mt"
                android:hint="Amount"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/lbldesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bell_mt"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtlbldesc"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded"
                android:ems="10"
                android:fontFamily="@font/bell_mt"
                android:gravity="start|top"
                android:hint="@string/type_here"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnadditem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/bell_mt"
                android:text="Add Item"
                android:textColor="#F3F3F3"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/prgbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>