<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.antique_pavbhaji.ui.deleteItem.DeleteItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/lblupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/menu_deleteitem"
        android:textColor="#E91E63"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/lblcatdel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bell_mt"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="#3F51B5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spincatvaluedel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_rounded"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlay2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/lblitemdel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bell_mt"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="#3F51B5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinitemvaluedel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_rounded"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btndeleteitem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/bell_mt"
            android:text="@string/menu_deleteitem"
            android:textColor="#F3F3F3"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/prgbardel"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>
</ScrollView>