<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.updateItem.UpdateItemFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lblupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="10dp"
                android:text="Update Item"
                android:textColor="#E91E63"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lblcatup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bell_mt"
                    android:gravity="center"
                    android:text="@string/category"
                    android:textColor="#3F51B5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spincatvalueup"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_rounded"
                     />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lblitemup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bell_mt"
                    android:gravity="center"
                    android:text="@string/item_name"
                    android:textColor="#3F51B5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinitemvalueup"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_rounded"
                     />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lblamountup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bell_mt"
                    android:gravity="center"
                    android:text="Amount"
                    android:textColor="#3F51B5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtlblamountup"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_rounded"
                    android:ems="10"
                    android:fontFamily="@font/bell_mt"
                    android:hint="Amount"
                    android:text=""
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lbldescup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bell_mt"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textColor="#3F51B5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtlbldescup"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_rounded"
                    android:ems="10"
                    android:fontFamily="@font/bell_mt"
                    android:gravity="start|top"
                    android:hint="@string/type_here"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnupdateitem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded"
                    android:fontFamily="@font/bell_mt"
                    android:text="Update Item"
                    android:textColor="#F3F3F3"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/prgbarup"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>